2008-09-30  Badlop  <badlop@process-one.net>

	* src/*/Makefile.win32: Provide explicit beam filenames because
	nmake does not accept wildcards (thanks to Attila
	Vangel)(EJAB-543)
	
2008-09-29  Badlop  <badlop@process-one.net>

	* contrib/ejabberd-modules.repo: Include 2.0.x branches

2008-09-22  Mickael Remond  <mremond@process-one.net>

	* src/mod_configure.erl: Fix adhoc commands reply types for
	"get-online-users-num" and "get-registered-users-num" (EJAB-756).

2008-09-15  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix explanation of mod_muc's anonymous
	option. Make clear that an ejabberd_service can only serve a
	single external component. Provide Mnesia directory when setting
	clustering (thanks to Matthew Reilly)

2008-09-02  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix mod_proxy configuration example
	* doc/guide.html: Likewise

2008-08-27  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: send last published events now supports
	PEP events from unavailable users nodes (EJAB-698)
	* src/ejabberd_c2s.erl: Likewise

2008-08-26  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.2.txt: Update for final release

	* doc/guide.tex: Windows binary installer requires MSVC++ 5
	* doc/guide.html: Likewise

2008-08-26  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: get_items bugfix (EJAB-716)

2008-08-25  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_privacy_odbc.erl: Prevent case_clause error when
	ejabber_odbc:sql_query returns {error, Reason}
	* src/mod_vcard_odbc.erl: Likewise
	* src/mod_last_odbc.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise

2008-08-25  Badlop  <badlop@process-one.net>

	* src/ejabberd_check.erl: Detect correctly MSSQL and ODBC
	configuration (EJAB-710)

2008-08-24  Geoff Cant  <gcant@process-one.net>

	* src/mod_mud/mod_muc_room.erl: is_visitor/2 fix - use get_role
	not get_affiliation
